--- a/main/main.html
+++ b/main/main.html
@@ -26,9 +26,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <script src="/js/all.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-RD0VC48YMW"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9379277470813252" crossorigin="anonymous"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9379277470813252"
-     crossorigin="anonymous"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -40,57 +37,12 @@
 <body>
   <script src="uv/uv.bundle.js"></script>
   <script src="uv/uv.config.js"></script>
-  <navbar class="navbar">
-    <div class="title"><a href="#">
-      <img src="img/logo.png">&nbsp;Utopia
-    </a></div>
-    <div class="pages">
-      <ul>
-        <li><a href="https://discord.gg/hFZC5cgsmq" target="_blank" class="disc" id="pageHover"><i class="fa-brands fa-discord"></i>&nbsp;&nbsp;Join our Discord!</a></li>
-        <li><a href="/gams/" id="pageHover"><span class="material-symbols-outlined">stadia_controller</span>&nbsp;Games</a></li>
-        <li><a href="/settings.html" id="pageHover"><span class="material-symbols-outlined">settings</span>&nbsp;Settings</a></li>
-        <!--<li><a href="/books.html" id="pageHover"><span class="material-symbols-outlined" style="margin-top:-4px;">star</span>&nbsp;Book‍mar‍kl‍ets</a></li>-->
-        <div class="dropdown">
-          <li><a href="#" class="quick_links" id="pageHover"><span class="material-symbols-outlined">expand_more</span>Quick Links</a></li>
-          <div class="dropdown-links">
-            <a href="/settings.html"><span class="material-symbols-outlined" style="font-size:14px;">add_circle</span>&nbsp;Add links in <span style="text-decoration: underline;">Settings</span></a>
-          </div>
-        </div>
-      </ul>
-      <span class="hamburger">
-        <span class="material-icons" id="menuBtn">menu</span>
-      </span>
-    </div>
-  </navbar>
-  <script src="/js/ub/nav.js"></script>
-  
-  <div class="center">
-    <ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-9379277470813252"
-     data-ad-slot="7589529996"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
     <div id="mainContent">
-      <span class="title">Utopia</span><br>
-      <input type="text" placeholder="Dive into the web" id="search"><br>
-      <div id="loading"><span class="loader"></span><span></span></div>
-        <!--<a href="settings.html" class="blackBtn" id="set"><span class="material-symbols-outlined">settings</span>&nbsp;Customize settings</a>-->
-        <!--<div class="blackBtn" id="blank" style="margin-left:8px;"><span class="material-symbols-outlined">open_in_new</span>&nbsp;Manually open in about:blank</div>-->
-        <!--<br>
-        <a href="https://discord.gg/hFZC5cgsmq" target="_blank" class="blackBtn" id="disc" style="margin-top:12px;vertical-align:middle;"><img src="img/disc_logo.png" style="margin-right:7px;" height="15">Join our discord!</a>-->
-    </div>
+      <span class="title">Arctic</span><br>
+      <input type="text" placeholder="Browser the unblocked web..." id="search"><br>
   </div>
-  <div class="bottomText">
-    <p>© Copyright Utopia 2023</p>
-    <p id="links"><a href="p.html">Privacy Policy</a><a href="t.html">ToS</a></p> <!-- fix tos and privacy policy pages -->
-  </div>
-  <script src="js/go.js"></script>
 
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-  
+ 
   <div class="facts">
     <h1>Schoolwork: ELA, Science, History, Math, Literature, Social Studies, and Writing</h1>
     <h1>School has many educational resources where you can learn, study, and gain knowledge.</h1>
